--- a/style.css
+++ b/style.css
@@ -131,102 +131,115 @@ input[type=checkbox] {
     margin-top: 10px;
 }
 
-@media (max-width :300px) {
-    #todo {
-        width: 80vw;
-    }
-    .fa-trash {
-        right: -55vw;
-        font-size: 9px;
-    }
-    .fa-pencil {
-        font-size: 9px;
-        right: -55vw;
-    }
-    .fa-plus {
-        right: 33vw;
-    }
-}
-
-@media (min-width:301px) and (max-width:380px) {
-    #todo {
-        width: 70vw;
-    }
-    .fa-trash {
-        right: -51vw;
-        font-size: 9px;
-    }
-    .fa-pencil {
-        font-size: 9px;
-        right: -52vw;
-    }
-    .fa-plus {
-        right: 38vw;
-    }
-}
-
-@media (min-width:381px) and (max-width:550px) {
-    #todo {
-        width: 60vw;
-    }
-    .fa-trash {
-        right: -40vw;
-        font-size: 10px;
-    }
-    .fa-pencil {
-        font-size: 10px;
-        right: -52vw;
-    }
-    .fa-plus {
-        right: 42vw;
-    }
-}
-
-@media (min-width:551px) and (max-width:800px) {
-    #todo {
-        width: 40vw;
-    }
-    .fa-trash {
-        right: -30vw;
-        font-size: 10px;
-    }
-    .fa-pencil {
-        font-size: 10px;
-        right: -30vw;
-    }
-    .fa-plus {
-        right: 51vw;
-    }
-}
-
-@media (min-width:801px) and (max-width:1000px) {
-    #todo {
-        width: 35vw;
-    }
-    .fa-trash {
-        right: -24.5vw;
-        font-size: 10px;
-    }
-    .fa-pencil {
-        font-size: 10px;
-        right: -29.5vw;
-    }
-    .fa-plus {
-        right: 54vw;
-    }
-}
-
-@media (min-width:1001px) and (max-width:1150px) {
-    #todo {
-        width: 27vw;
-    }
-    .fa-trash {
-        right: -19.9vw;
-    }
-    .fa-pencil {
-        right: -20vw;
-    }
-    .fa-plus {
-        right: 58vw;
-    }
-}
+    	@media (max-width :300px) {
+    	#todo {
+    	width: 80vw;
+        height:400px;
+    	}
+    	.fa-trash {
+    	right: -55vw;
+    	font-size: 9px;
+    	}
+    	.fa-pencil {
+    	font-size: 9px;
+    	right: -55vw;
+    	}
+    	.fa-plus {
+    	right: 33vw;
+    	display:none;
+    	}
+    	#todos {
+    	max-height: 280px;
+    	}
+    	}
+    	
+    	@media (min-width:301px) and (max-width:380px) {
+    	#todo {
+    	width: 70vw;
+    	height:410px;
+    	}
+    	.fa-trash {
+    	right: -51vw;
+    	font-size: 9px;
+    	}
+    	.fa-pencil {
+    	font-size: 9px;
+    	right: -52vw;
+    	}
+    	.fa-plus {
+    	display:none;
+    	}
+    	#todos {
+    	max-height: 290px;
+    	}
+    	}
+    	
+    	@media (min-width:381px) and (max-width:550px) {
+    	#todo {
+    	width: 70vw;
+    	height:430px;
+    	}
+    	.fa-trash {
+    	right: -47vw;
+    	font-size: 10px;
+    	}
+    	.fa-pencil {
+    	font-size: 10px;
+    	right: -60vw;
+    	}
+    	.fa-plus {
+    	display:none;
+    	}
+    	 #todos {
+    	 max-height: 300px;
+    	 }
+    	}
+    	
+    	@media (min-width:551px) and (max-width:800px) {
+    	#todo {
+    	width: 40vw;
+    	}
+    	.fa-trash {
+    	right: -30vw;
+    	font-size: 10px;
+    	}
+    	.fa-pencil {
+    	font-size: 10px;
+    	right: -30vw;
+    	}
+    	.fa-plus {
+    	right: 51vw;
+    	}
+    	}
+    	
+    	@media (min-width:801px) and (max-width:1000px) {
+    	#todo {
+    	width: 35vw;
+    	}
+    	.fa-trash {
+    	right: -24.5vw;
+    	font-size: 10px;
+    	}
+    	.fa-pencil {
+    	font-size: 10px;
+    	right: -29.5vw;
+    	}
+    	.fa-plus {
+    	right: 54vw;
+    	}
+    	}
+    	
+    	@media (min-width:1001px) and (max-width:1150px) {
+    	#todo {
+    	width: 27vw;
+    	}
+    	.fa-trash {
+    	right: -19.9vw;
+    	}
+    	.fa-pencil {
+    	right: -20vw;
+    	}
+    	.fa-plus {
+    	right: 58vw;
+    	}
+    	}
