--- a/style.css
+++ b/style.css
@@ -175,16 +175,16 @@ input[type=checkbox] {
 
 @media (max-width :300px) {
     #todo {
-        width: 92vw;
-        height : fit-content;
+        width: 90vw;
+        height: 27rem;
     }
     .fa-trash {
-        right: -55vw;
+        right: -52vw;
         font-size: 9px;
     }
     .fa-pencil {
         font-size: 9px;
-        right: -55vw;
+        right: -72vw;
     }
      .fa-plus {
         display: none;
@@ -196,65 +196,78 @@ input[type=checkbox] {
 }
 
 @media (min-width:301px) and (max-width:380px) {
-        #todo {
-        width: 95vw;
-
+    #todo {
+        width: 90vw;
+        height: 27rem;
     }
     .fa-trash {
-        right: -51vw;
+        right: -57vw;
         font-size: 9px;
     }
     .fa-pencil {
         font-size: 9px;
-        right: -69vw;
+        right: -75vw;
     }
     #status {
         font-size: 15px;
     }
-
-
+    .fa-plus {
+        display: none;
+    }
 }
 
-@media (min-width:381px) and (max-width:440px) {
+@media (min-width:381px) and (max-width:460px) {
     #todo {
         width: 85vw;
-        height : fit-content;
+        height: 27rem;
     }
     .fa-trash {
-        right: -20vw;
+        right: -58vw;
         font-size: 10px;
     }
     .fa-pencil {
         font-size: 10px;
-        right: -35vw;
+        right: -72vw;
+    }
+    .fa-plus {
+        display: none;
+    }
+}
+
+@media (min-width:460px) and (max-width:550px) {
+    #todo {
+        width: 60vw;
+        height: 27rem;
+    }
+    .fa-trash {
+        right: -40vw;
+        font-size: 10px;
+    }
+    .fa-pencil {
+        font-size: 10px;
+        right: -52vw;
     }
 
 }
-@media (min-width:440px) and (max-width:550px) {
-    #todo {
-        width: 65vw;
-        height : fit-content;
-    }
 
 
 @media (min-width:551px) and (max-width:800px) {
     #todo {
-        width: 40vw;
+        width: 43vw;
     }
     .fa-trash {
-        right: -30vw;
+        right: -28vw;
         font-size: 10px;
     }
     .fa-pencil {
         font-size: 10px;
-        right: -30vw;
+        right: -36vw;
     }
 }
 
 @media (min-width:551px) and (max-width:700px) {
     #todo {
         width: 42vw;
-        height : fit-content;
     }
 }
 
@@ -263,7 +276,7 @@ input[type=checkbox] {
         width: 35vw;
     }
     .fa-trash {
-        right: -24.5vw;
+        right: -23vw;
         font-size: 10px;
     }
     .fa-pencil {
@@ -277,9 +290,9 @@ input[type=checkbox] {
         width: 27vw;
     }
     .fa-trash {
-        right: -19.9vw;
+        right: -15vw;
     }
     .fa-pencil {
-        right: -20vw;
+        right: -22vw;
     }
 }
